--- a/app/src/main/res/layout/content_quiz_layout.xml
+++ b/app/src/main/res/layout/content_quiz_layout.xml
@@ -8,7 +8,7 @@
             type="com.sekhgmainuddin.learnwithfun.data.dto.courseDetails.ContentDto" />
         <variable
             name="clickHandler"
-            type="com.sekhgmainuddin.learnwithfun.presentation.home.courseTutorial.adapters.CourseContentAdapter.CourseContentClickListener" />
+            type="com.sekhgmainuddin.learnwithfun.presentation.home.courseTutorial.adapters.CourseContentClickListener" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
