--- a/app/src/main/res/layout-land/activity_course_video.xml
+++ b/app/src/main/res/layout-land/activity_course_video.xml
@@ -31,6 +31,7 @@
             app:resize_mode="fit"
             app:show_buffering="always"
             android:bufferType="spannable"
+            android:orientation="horizontal"
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
