--- a/app/src/main/res/layout/activity_course_video.xml
+++ b/app/src/main/res/layout/activity_course_video.xml
@@ -4,7 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <import type="android.view.View"/>
+        <variable
+            name="content"
+            type="kotlinx.coroutines.flow.MutableStateFlow&lt;com.sekhgmainuddin.learnwithfun.data.dto.courseDetails.ContentDto>" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -33,6 +36,7 @@
             app:resize_mode="fit"
             app:show_buffering="always"
             android:bufferType="spannable"
+            android:orientation="vertical"
             />
 
         <androidx.constraintlayout.widget.Guideline
@@ -41,6 +45,121 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.35" />
+
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/verticalGuideline35"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/contentTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/noto_sans_semi_bold"
+                    android:text="@{content.title, default = `Intoduction to Figma`}"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginHorizontal="15dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
+
+                <TextView
+                    android:id="@+id/contentDesc"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingVertical="5dp"
+                    android:text="@{content.desc, default = `ajdashdiyhasoidyhaiosdyhaosidyhoaisyhdoiasdnlaknclo ;oghdoi;qwhjd;oijhd kashd;kashd;.kashd;oiqwyh;eoih;lk jhalsjkdgho`}"
+                    android:textColor="@color/grey"
+                    android:layout_marginHorizontal="15dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/contentTitle" />
+
+                <TextView
+                    android:id="@+id/otherAttachedItems"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/other_attachments_with_this_video"
+                    android:fontFamily="@font/noto_sans_semi_bold"
+                    android:textColor="@color/black"
+                    android:layout_marginHorizontal="15dp"
+                    app:layout_constraintTop_toBottomOf="@id/contentDesc"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:paddingBottom="2dp"
+                    android:visibility="@{(content.notesPdfUrl!=null || (content.quiz!=null &amp;&amp; !content.quiz.isEmpty()) ? View.VISIBLE: View.GONE)}"
+                    />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/downloadNotesButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:scaleType="centerInside"
+                    android:layout_gravity="center_vertical"
+                    android:drawableLeft="@drawable/download_notes_drawable_24dp"
+                    android:text="@string/notes"
+                    android:textAllCaps="false"
+                    app:elevation="5dp"
+                    android:translationZ="5dp"
+                    app:cornerRadius="25dp"
+                    android:visibility="@{content.notesPdfUrl!=null ? View.VISIBLE: View.GONE}"
+                    app:layout_constraintTop_toBottomOf="@id/otherAttachedItems"
+                    app:layout_constraintStart_toStartOf="@id/otherAttachedItems"
+                    />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/playQuiz"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableLeft="@drawable/attend_quiz_drawable"
+                    android:paddingVertical="5dp"
+                    android:text="@string/quiz"
+                    android:textAllCaps="false"
+                    app:cornerRadius="25dp"
+                    android:translationZ="5dp"
+                    app:elevation="5dp"
+                    android:backgroundTint="@color/paris_green"
+                    android:visibility="@{(content.quiz!=null &amp;&amp; !content.quiz.isEmpty()) ? View.VISIBLE: View.GONE}"
+                    app:layout_constraintTop_toBottomOf="@id/otherAttachedItems"
+                    app:layout_constraintStart_toEndOf="@id/downloadNotesButton"
+                    android:layout_marginStart="15dp"/>
+
+                <TextView
+                    android:id="@+id/otherVideosTV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="@id/contentDesc"
+                    app:layout_constraintTop_toBottomOf="@id/otherAttachedItems"
+                    android:text="@string/other_videos"
+                    android:fontFamily="@font/noto_sans_semi_bold"
+                    android:textColor="@color/black"
+                    android:layout_marginTop="55dp"
+                    />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/otherVideoRecyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    app:layout_constraintTop_toBottomOf="@id/otherVideosTV"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    tools:listitem="@layout/other_video_content_item"
+                    android:layout_marginTop="5dp"
+                    android:paddingHorizontal="20dp"
+                    android:clipToPadding="false"
+                    />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.core.widget.NestedScrollView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
