--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -6,6 +6,11 @@
 
     <data>
 
+        <import type="android.view.View" />
+
+        <variable
+            name="viewModel"
+            type="com.sekhgmainuddin.learnwithfun.presentation.quiz.QuizViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -52,37 +57,12 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
             android:fontFamily="@font/noto_sans_semi_bold"
-            android:text="7 of 10 questions"
+            android:text="@{@string/_i_of_n_questions(viewModel.questionNumber, viewModel.questionsList.size())}"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintEnd_toStartOf="@id/reportButton"
             app:layout_constraintStart_toEndOf="@id/backButton"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/questionImage"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginTop="20dp"
-            android:background="@color/white"
-            android:scaleType="fitCenter"
-            android:visibility="gone"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/questionStatus" />
-
-        <ImageButton
-            android:id="@+id/expandImageButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="@android:color/transparent"
-            android:src="@drawable/baseline_fullscreen_24"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="@id/questionImage"
-            app:layout_constraintEnd_toEndOf="@id/questionImage"
-            app:tint="@color/black" />
 
         <TextView
             android:id="@+id/question"
@@ -90,48 +70,166 @@
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:fontFamily="@font/noto_sans_semi_bold"
-            android:text="The code snippet above will print..."
+            android:text="@{viewModel.currentQuiz.quiz.question}"
             android:textColor="@color/black"
             android:textSize="18sp"
-            app:layout_constraintTop_toBottomOf="@id/questionImage" />
+            app:layout_constraintTop_toBottomOf="@id/questionStatus" />
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/question">
 
-            <LinearLayout
-                android:id="@+id/optionsLayout"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/optionsAndExplanationLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="20dp"
-                android:orientation="vertical" >
+                android:orientation="vertical"
+                android:paddingBottom="20dp">
 
-                <include
-                    layout="@layout/quiz_option_layout"
-                    bind:answer="@{`Academy`}"
-                    bind:isCorrectAns="@{null}" />
+                <ImageView
+                    android:id="@+id/questionImage"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:layout_marginHorizontal="20dp"
+                    android:background="@color/white"
+                    android:scaleType="fitCenter"
+                    android:layout_marginTop="10dp"
+                    android:visibility="@{viewModel.currentQuiz.quiz.image != null ? View.VISIBLE : View.GONE ,default = `gone`}"
+                    app:imageUrl="@{viewModel.currentQuiz.quiz.image}"
+                    app:progressBar="@{progressBar}"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                     />
 
-                <include
-                    layout="@layout/quiz_option_layout"
-                    bind:answer="@{`Quizeasy`}"
-                    bind:isCorrectAns="@{null}" />
+                <ProgressBar
+                    android:id="@+id/progressBar"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    app:layout_constraintTop_toTopOf="@id/questionImage"
+                    app:layout_constraintBottom_toBottomOf="@id/questionImage"
+                    app:layout_constraintStart_toStartOf="@id/questionImage"
+                    app:layout_constraintEnd_toEndOf="@id/questionImage"
+                    android:elevation="5dp"
+                    android:visibility="@{viewModel.currentQuiz.quiz.image != null ? View.VISIBLE : View.GONE ,default = `gone`}"
+                    />
 
-                <include
-                    layout="@layout/quiz_option_layout"
-                    bind:answer="@{`Type Error`}"
-                    bind:isCorrectAns="@{null}" />
+                <ImageButton
+                    android:id="@+id/expandImageButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/baseline_fullscreen_24"
+                    android:visibility="@{viewModel.currentQuiz.quiz.image != null ? View.VISIBLE : View.GONE ,default = `visible`}"
+                    app:layout_constraintBottom_toBottomOf="@id/questionImage"
+                    app:layout_constraintEnd_toEndOf="@id/questionImage"
+                    app:tint="@color/black"
+                    android:elevation="10dp"/>
 
-                <include
-                    layout="@layout/quiz_option_layout"
-                    bind:answer="@{`Syntax Error`}"
-                    bind:isCorrectAns="@{null}" />
+                <TextView
+                    android:id="@+id/optionsTV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/questionImage"
+                    android:paddingVertical="10dp"
+                    android:text="@string/options"
+                    android:textSize="18sp"
+                    android:textColor="@color/black"
+                    android:layout_marginStart="20dp"
+                    android:fontFamily="@font/shantellsans_regular"
+                    />
 
+                <LinearLayout
+                    android:id="@+id/optionsLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintTop_toBottomOf="@id/optionsTV"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent">
 
+                    <include
+                        android:id="@+id/option1Layout"
+                        layout="@layout/quiz_option_layout"
+                        bind:optionNumber="@{0}"
+                        bind:viewModel="@{viewModel}"
+                        />
 
-            </LinearLayout>
+                    <include
+                        android:id="@+id/option2Layout"
+                        layout="@layout/quiz_option_layout"
+                        bind:optionNumber="@{1}"
+                        bind:viewModel="@{viewModel}" />
+
+                    <include
+                        android:id="@+id/option3Layout"
+                        layout="@layout/quiz_option_layout"
+                        bind:optionNumber="@{2}"
+                        bind:viewModel="@{viewModel}" />
+
+                    <include
+                        android:id="@+id/option4Layout"
+                        layout="@layout/quiz_option_layout"
+                        bind:optionNumber="@{3}"
+                        bind:viewModel="@{viewModel}" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/answerDescTV"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    app:layout_constraintTop_toBottomOf="@id/optionsLayout"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:visibility="@{viewModel.currentQuiz.correctAns!=null ? View.VISIBLE : View.GONE ,default = `visible`}">
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="2dp"
+                        android:layout_weight="1"
+                        android:background="@color/science_blue" />
+
+                    <TextView
+                        android:id="@+id/answerDesc"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:fontFamily="@font/noto_sans_medium_italic"
+                        android:text="@string/answer_explanation"
+                        android:textColor="@color/black"
+                        android:textSize="18sp" />
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="2dp"
+                        android:layout_weight="1"
+                        android:background="@color/science_blue" />
+
+                </LinearLayout>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/answerDescTV"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginHorizontal="20dp"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="50dp"
+                    android:text="@{viewModel.currentQuiz.quiz.questionDesc}"
+                    android:textColor="@color/black"
+                    android:visibility="@{viewModel.currentQuiz.correctAns!=null ? View.VISIBLE : View.GONE ,default = `visible`}" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.core.widget.NestedScrollView>
 
@@ -139,15 +237,16 @@
             android:id="@+id/nextQuestionButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:onClick="@{(v) -> viewModel.nextQuestion()}"
             android:paddingHorizontal="22dp"
             android:paddingVertical="12dp"
-            android:text="@string/next_question"
-            android:textColor="@color/white"
+            android:text="@{viewModel.questionNumber!=viewModel.questionsList.size()? @string/next_question : @string/submit_exam}"
             android:textAllCaps="false"
+            android:textColor="@color/white"
             app:cornerRadius="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_margin="20dp"/>
+            app:layout_constraintEnd_toEndOf="parent" />
 
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -177,9 +276,9 @@
                 android:id="@+id/cameraPreview"
                 android:layout_width="120dp"
                 android:layout_height="175dp"
-                android:layout_alignParentBottom="true"
                 android:layout_alignParentStart="true"
-                android:layout_margin="20dp"/>
+                android:layout_alignParentBottom="true"
+                android:layout_margin="20dp" />
 
         </RelativeLayout>
 
