--- a/app/src/main/res/layout/content_quiz_layout.xml
+++ b/app/src/main/res/layout/content_quiz_layout.xml
@@ -13,68 +13,70 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="74dp"
         android:background="@drawable/gradient_border_ll">
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/quizAnimation"
-            android:layout_width="80dp"
+            android:layout_width="74dp"
             android:layout_height="match_parent"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginBottom="2dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:lottie_autoPlay="true"
-            app:lottie_rawRes="@raw/content_quiz_animation"
-            app:lottie_loop="true"
-            android:scaleType="fitXY"
-            />
+            app:lottie_loop="false"
+            app:lottie_rawRes="@raw/content_quiz_animation" />
 
         <TextView
             android:id="@+id/quizTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="10dp"
             android:fontFamily="@font/noto_sans_semi_bold"
             android:text="@{content.title, default = `Intoduction to Figma`}"
             android:textColor="@color/black"
             android:textSize="16sp"
-            android:layout_marginHorizontal="10dp"
-            app:layout_constraintStart_toEndOf="@id/quizAnimation"
+            app:layout_constraintBottom_toTopOf="@+id/quizDesc"
             app:layout_constraintEnd_toStartOf="@id/attendButton"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@id/quizAnimation"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed" />
 
         <TextView
             android:id="@+id/quizDesc"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="10dp"
             android:layout_marginTop="5dp"
+            android:ellipsize="end"
+            android:maxLines="2"
             android:text="@{content.desc, default = `ajdashdiyhasoidyhaiosdyhaosidyhoaisyhdoiasdnlaknclo ;oghdoi;qwhjd;oijhd kashd;kashd;.kashd;oiqwyh;eoih;lk jhalsjkdgho`}"
             android:textColor="@color/grey"
-            android:layout_marginHorizontal="10dp"
-            app:layout_constraintStart_toEndOf="@id/quizAnimation"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/attendButton"
-            app:layout_constraintTop_toBottomOf="@id/quizTitle"
-            android:maxLines="2"
-            android:ellipsize="end"
-            />
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@id/quizAnimation"
+            app:layout_constraintTop_toBottomOf="@+id/quizTitle" />
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/attendButton"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:background="@color/science_blue"
             android:layout_marginEnd="10dp"
-            app:shapeAppearanceOverlay="@style/circularImageView"
-            android:src="@drawable/baseline_navigate_next_24"
-            app:tint="@color/white"
-            app:contentPadding="10dp"
+            android:background="@color/science_blue"
+            android:clickable="true"
             android:focusable="false"
             android:focusableInTouchMode="false"
-            android:clickable="true"
             android:onClick="@{clickHandler::attendQuiz}"
-            />
+            android:src="@drawable/baseline_navigate_next_24"
+            app:contentPadding="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:shapeAppearanceOverlay="@style/circularImageView"
+            app:tint="@color/white" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
