--- a/app/src/main/res/layout/quiz_option_layout.xml
+++ b/app/src/main/res/layout/quiz_option_layout.xml
@@ -3,33 +3,84 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
+        <import type="com.sekhgmainuddin.learnwithfun.R"/>
+        <import type="android.view.View"/>
         <variable
-            name="answer"
-            type="String" />
-
+            name="optionNumber"
+            type="int" />
         <variable
-            name="isCorrectAns"
-            type="Boolean" />
+            name="viewModel"
+            type="com.sekhgmainuddin.learnwithfun.presentation.quiz.QuizViewModel" />
     </data>
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
-        android:clickable="true"
+        android:layout_marginHorizontal="20dp"
+        app:cardElevation="@{(viewModel.currentQuiz.correctAns!=null &amp;&amp; viewModel.currentQuiz.correctAns == optionNumber) ? @dimen/dp_10 : @dimen/dp_0}"
+        android:clickable="@{viewModel.currentQuiz.correctAns==null}"
         app:cardCornerRadius="10dp"
-        app:strokeColor="@{isCorrectAns==null ?@color/light_science_blue : isCorrectAns==true ? @color/paris_green : @color/black}"
-        app:strokeWidth="1dp">
+        app:strokeColor="@{viewModel.currentQuiz.correctAns==null ?@color/light_science_blue : viewModel.currentQuiz.correctAns==optionNumber ? @color/paris_green : @color/redColor}"
+        app:strokeWidth="2dp"
+        android:onClick="@{(v) -> viewModel.checkAnswer(optionNumber)}">
 
-        <TextView
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/noto_sans_semi_bold"
-            android:padding="14dp"
-            android:text="@{answer, default=`Option 1`}"
-            android:textColor="@color/black"
-            android:textSize="16sp" />
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/textOption"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/noto_sans_semi_bold"
+                android:padding="14dp"
+                android:text="@{@string/option_number(optionNumber, viewModel.currentQuiz.quiz.options[optionNumber].option)}"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/imageOption"
+                />
+
+            <ImageView
+                android:id="@+id/imageOption"
+                android:layout_width="0dp"
+                android:layout_height="150dp"
+                android:layout_weight="1"
+                android:visibility="@{viewModel.currentQuiz.quiz.options[optionNumber].optionType.equals(`IMAGE`) ? View.VISIBLE : View.GONE, default = `gone`}"
+                app:imageUrl="@{viewModel.currentQuiz.quiz.options[optionNumber].option ?? ` `}"
+                app:progressBar="@{progressBar}"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/optionsAnimation"
+                />
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                app:layout_constraintTop_toTopOf="@id/imageOption"
+                app:layout_constraintBottom_toBottomOf="@id/imageOption"
+                app:layout_constraintStart_toStartOf="@id/imageOption"
+                app:layout_constraintEnd_toEndOf="@id/imageOption"
+                android:elevation="5dp"
+                android:visibility="@{viewModel.currentQuiz.quiz.options[optionNumber].optionType.equals(`IMAGE`) ? View.VISIBLE : View.GONE, default = `gone`}"
+                />
+            
+            <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/optionsAnimation"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                app:customRawRes="@{viewModel.currentQuiz.correctAns == optionNumber?R.raw.correct_option_animtion : R.raw.wrong_option_animation}"
+                app:customLoop="@{false}"
+                android:layout_gravity="center_vertical"
+                android:visibility="@{viewModel.currentQuiz.userClick == optionNumber?View.VISIBLE:View.GONE, default = `gone`}"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                />
+            
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </com.google.android.material.card.MaterialCardView>
 </layout>
