--- a/app/src/main/res/layout/fragment_course_tutorial.xml
+++ b/app/src/main/res/layout/fragment_course_tutorial.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.sekhgmainuddin.learnwithfun.presentation.home.couses.CourseViewModel" />
+            type="com.sekhgmainuddin.learnwithfun.presentation.home.courses.CourseViewModel" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -26,27 +26,53 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
-                app:layout_scrollFlags="scroll|enterAlways"
-                app:contentInsetStart="0dp">
+                app:contentInsetStart="0dp"
+                app:layout_scrollFlags="scroll|enterAlways">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                    <com.google.android.material.floatingactionbutton.FloatingActionButton
-                        android:id="@+id/backButton"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginTop="10dp"
-                        android:cropToPadding="true"
-                        android:src="@drawable/baseline_close_24"
-                        app:backgroundTint="@color/white"
-                        app:elevation="1dp"
-                        app:fabCustomSize="50dp"
-                        app:maxImageSize="25dp"
-                        app:tint="@color/black" />
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_marginHorizontal="20dp">
+
+                        <com.google.android.material.floatingactionbutton.FloatingActionButton
+                            android:id="@+id/backButton"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:layout_marginTop="10dp"
+                            android:cropToPadding="true"
+                            android:src="@drawable/baseline_close_24"
+                            app:backgroundTint="@color/white"
+                            app:elevation="1dp"
+                            app:fabCustomSize="50dp"
+                            app:maxImageSize="25dp"
+                            app:tint="@color/black" />
+
+                        <Space
+                            android:layout_width="0dp"
+                            android:layout_height="1dp"
+                            android:layout_weight="1" />
+
+                        <com.google.android.material.floatingactionbutton.FloatingActionButton
+                            android:id="@+id/refreshButton"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:layout_marginStart="20dp"
+                            android:layout_marginTop="10dp"
+                            android:cropToPadding="true"
+                            android:src="@drawable/baseline_refresh_24"
+                            app:backgroundTint="@color/white"
+                            app:elevation="2dp"
+                            app:fabCustomSize="50dp"
+                            app:maxImageSize="25dp"
+                            app:tint="@color/black" />
+
+                    </LinearLayout>
 
                     <TextView
                         android:id="@+id/tutorName"
@@ -55,12 +81,12 @@
                         android:layout_marginHorizontal="20dp"
                         android:layout_marginTop="15dp"
                         android:fontFamily="@font/noto_sans_semi_bold"
+                        android:maxLines="1"
                         android:textAlignment="viewStart"
                         android:textColor="@color/black"
                         android:textSize="16sp"
                         android:textStyle="bold"
-                        android:maxLines="1"
-                        app:full_text="@{@string/by(viewModel.courseDetail.instructorName)}"
+                        app:full_text="@{@string/by(viewModel.courseDetail.instructorName ?? ` `)}"
                         app:non_span_style="@{`bold`}"
                         app:span_color="@{@color/grey}"
                         app:span_text="@{@string/by_}" />
@@ -111,16 +137,23 @@
 
         </com.google.android.material.appbar.AppBarLayout>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/courseContentRecyclerView"
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/swipeRefreshLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="20dp"
-            android:clipToPadding="false"
-            android:orientation="vertical"
-            android:padding="20dp"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            tools:listitem="@layout/course_content_item" />
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/courseContentRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="20dp"
+                android:clipToPadding="false"
+                android:orientation="vertical"
+                android:padding="20dp"
+                tools:listitem="@layout/course_content_item" />
+
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
