--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-        <import type="com.sekhgmainuddin.learnwithfun.R"/>
+
+        <import type="com.sekhgmainuddin.learnwithfun.R" />
+
         <variable
             name="viewModel"
             type="com.sekhgmainuddin.learnwithfun.presentation.home.home.HomeViewModel" />
@@ -15,140 +17,143 @@
         android:layout_height="match_parent"
         tools:context=".presentation.home.home.HomeFragment">
 
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/profileImage"
-                android:layout_width="54dp"
-                android:layout_height="54dp"
-                android:layout_margin="20dp"
-                android:scaleType="centerCrop"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:shapeAppearanceOverlay="@style/circularImageView"
-                app:imageUrl="@{viewModel.userDetail.user.profilePicture ?? ` `}"
-                app:progressBar="@{profileImageProgress}"
-                app:errorImage="@{R.drawable.default_user_image}"
-                app:placeholder="@{R.drawable.default_user_image}"
-                android:elevation="6dp"
-                android:clickable="true"
-                />
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/profileImage"
+            android:layout_width="54dp"
+            android:layout_height="54dp"
+            android:layout_margin="20dp"
+            android:clickable="true"
+            android:elevation="6dp"
+            android:scaleType="centerCrop"
+            app:errorImage="@{R.drawable.default_user_image}"
+            app:imageUrl="@{viewModel.userDetail.user.profilePicture ?? ` `}"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:placeholder="@{R.drawable.default_user_image}"
+            app:progressBar="@{profileImageProgress}"
+            app:shapeAppearanceOverlay="@style/circularImageView" />
 
-            <ProgressBar
-                android:id="@+id/profileImageProgress"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                app:layout_constraintTop_toTopOf="@id/profileImage"
-                app:layout_constraintBottom_toBottomOf="@id/profileImage"
-                app:layout_constraintStart_toStartOf="@id/profileImage"
-                app:layout_constraintEnd_toEndOf="@id/profileImage"
-                android:padding="5dp"
-                />
+        <ProgressBar
+            android:id="@+id/profileImageProgress"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:padding="5dp"
+            app:layout_constraintBottom_toBottomOf="@id/profileImage"
+            app:layout_constraintEnd_toEndOf="@id/profileImage"
+            app:layout_constraintStart_toStartOf="@id/profileImage"
+            app:layout_constraintTop_toTopOf="@id/profileImage" />
+
+        <TextView
+            android:id="@+id/headerTitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="15dp"
+            android:fontFamily="@font/shantellsans_regular"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            app:full_text="@{@string/hi_username(viewModel.userDetail.user.name.substring(0, viewModel.userDetail.user.name.indexOf(' ')) ?? `\u0008`)}"
+            app:layout_constraintBottom_toBottomOf="@id/profileImage"
+            app:layout_constraintStart_toEndOf="@id/profileImage"
+            app:layout_constraintTop_toTopOf="@id/profileImage"
+            app:non_span_style="@{`bold`}"
+            app:span_color="@{@color/grey}"
+            app:span_text="@{@string/hi_}" />
+
+        <ImageButton
+            android:id="@+id/notificationIcon"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_margin="10dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:clickable="true"
+            android:padding="5dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/baseline_notifications_none_24"
+            app:layout_constraintBottom_toBottomOf="@id/profileImage"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/profileImage"
+            app:tint="@color/science_blue" />
+
+        <ImageView
+            android:id="@+id/unreadNoticationIcon"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
+            android:layout_margin="8dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/baseline_circle_24"
+            app:layout_constraintEnd_toEndOf="@id/notificationIcon"
+            app:layout_constraintTop_toTopOf="@id/notificationIcon"
+            app:tint="@color/orange" />
+
+        <TextView
+            android:id="@+id/searchHeaderTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="10dp"
+            android:text="@string/find_your_favourite_course_here"
+            android:textAlignment="viewStart"
+            android:textColor="@color/darkGrey"
+            android:textSize="28sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/profileImage" />
+
+        <LinearLayout
+            android:id="@+id/searchViewLayout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginVertical="10dp"
+            android:background="@drawable/rounded_corners_ll"
+            android:orientation="horizontal"
+            android:elevation="2dp"
+            app:layout_constraintTop_toBottomOf="@id/searchHeaderTitle"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
 
             <TextView
-                android:id="@+id/headerTitle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="15dp"
-                app:full_text="@{@string/hi_username(viewModel.userDetail.user.name.substring(0, viewModel.userDetail.user.name.indexOf(' ')) ?? `\u0008`)}"
-                app:span_text="@{@string/hi_}"
-                app:span_color="@{@color/grey}"
-                app:non_span_style="@{`bold`}"
-                android:fontFamily="@font/shantellsans_regular"
-                android:textSize="20sp"
-                android:textColor="@color/black"
-                app:layout_constraintBottom_toBottomOf="@id/profileImage"
-                app:layout_constraintStart_toEndOf="@id/profileImage"
-                app:layout_constraintTop_toTopOf="@id/profileImage" />
+                android:layout_weight="1"
+                android:text="@string/find_you_course_or_mentor"
+                android:drawableLeft="@drawable/baseline_search_24"
+                android:drawableTint="@color/grey"
+                android:padding="10dp"
+                android:textSize="16sp"
+                android:drawablePadding="10dp"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_vertical"
+                android:paddingStart="18dp"
+                />
 
             <ImageButton
-                android:id="@+id/notificationIcon"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_margin="10dp"
-                android:padding="5dp"
-                android:scaleType="fitXY"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:clickable="true"
-                android:src="@drawable/baseline_notifications_none_24"
-                app:layout_constraintBottom_toBottomOf="@id/profileImage"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/profileImage"
-                app:tint="@color/science_blue" />
+                android:id="@+id/filterButton"
+                android:layout_width="45dp"
+                android:layout_height="match_parent"
+                android:background="@drawable/gradient_button_color_blue"
+                android:padding="10dp"
+                android:scaleType="centerInside"
+                android:src="@drawable/filter_icon"
+                app:tint="@color/white"
+                android:clickable="false"/>
 
-            <ImageView
-                android:id="@+id/unreadNoticationIcon"
-                android:layout_width="12dp"
-                android:layout_height="12dp"
-                android:layout_margin="8dp"
-                android:background="@android:color/transparent"
-                android:src="@drawable/baseline_circle_24"
-                app:layout_constraintEnd_toEndOf="@id/notificationIcon"
-                app:layout_constraintTop_toTopOf="@id/notificationIcon"
-                app:tint="@color/orange" />
+        </LinearLayout>
 
-            <TextView
-                android:id="@+id/searchHeaderTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="25dp"
-                android:layout_marginBottom="10dp"
-                android:text="@string/find_your_favourite_course_here"
-                android:textAlignment="viewStart"
-                android:textColor="@color/darkGrey"
-                android:textSize="28sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/profileImage" />
-
-            <LinearLayout
-                android:id="@+id/searchViewLayout"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginVertical="10dp"
-                android:background="@drawable/rounded_corners_ll"
-                android:orientation="horizontal"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/searchHeaderTitle">
-
-                <androidx.appcompat.widget.SearchView
-                    android:id="@+id/searchChat"
-                    android:layout_width="0dp"
-                    android:layout_height="42dp"
-                    android:layout_weight="1"
-                    app:defaultQueryHint="@string/find_you_course_or_mentor"
-                    app:iconifiedByDefault="false"
-                    app:queryBackground="@null"
-                    android:textSize="14sp"
-                    />
-
-                <ImageButton
-                    android:id="@+id/filterButton"
-                    android:layout_width="42dp"
-                    android:layout_height="42dp"
-                    android:background="@drawable/gradient_button_color_blue"
-                    android:padding="10dp"
-                    android:scaleType="centerInside"
-                    android:src="@drawable/filter_icon"
-                    app:tint="@color/white" />
-
-            </LinearLayout>
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/home_screen_rv"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginTop="10dp"
-                app:layout_constraintTop_toBottomOf="@id/searchViewLayout"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                android:orientation="vertical"
-                android:paddingVertical="15dp"
-                android:clipToPadding="false"
-                />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/home_screen_rv"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="10dp"
+            android:clipToPadding="false"
+            android:orientation="vertical"
+            android:paddingVertical="15dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/searchViewLayout" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
