--- a/app/src/main/res/layout/quiz_option_layout.xml
+++ b/app/src/main/res/layout/quiz_option_layout.xml
@@ -18,7 +18,6 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
         android:layout_marginHorizontal="20dp"
-        app:cardElevation="@{(viewModel.currentQuiz.correctAns!=null &amp;&amp; viewModel.currentQuiz.correctAns == optionNumber) ? @dimen/dp_10 : @dimen/dp_0}"
         android:clickable="@{viewModel.currentQuiz.correctAns==null}"
         app:cardCornerRadius="10dp"
         app:strokeColor="@{viewModel.currentQuiz.correctAns==null ?@color/light_science_blue : viewModel.currentQuiz.correctAns==optionNumber ? @color/paris_green : @color/redColor}"
@@ -35,7 +34,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/noto_sans_semi_bold"
                 android:padding="14dp"
-                android:text="@{@string/option_number(optionNumber, viewModel.currentQuiz.quiz.options[optionNumber].option)}"
+                android:text="@{@string/option_number(optionNumber+1, viewModel.currentQuiz.quiz.options[optionNumber].option)}"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintTop_toTopOf="parent"
