--- a/app/src/main/res/layout/fragment_enroll_course.xml
+++ b/app/src/main/res/layout/fragment_enroll_course.xml
@@ -241,6 +241,7 @@
                     android:text="@string/enroll_now"
                     android:backgroundTint="@color/black"
                     android:padding="16dp"
+                    android:textColor="@color/white"
                     />
 
             </LinearLayout>
