--- a/app/src/main/res/layout/mentor_layout_search.xml
+++ b/app/src/main/res/layout/mentor_layout_search.xml
@@ -3,65 +3,69 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
         <variable
             name="user"
             type="com.sekhgmainuddin.learnwithfun.data.remote.dto.UserDto" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.cardview.widget.CardView
+        android:id="@+id/mentorCV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/gradient_border_ll"
-        android:padding="10dp">
+        android:clickable="true">
 
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/profileImage"
-            android:layout_width="55dp"
-            android:layout_height="55dp"
-            app:imageUrl="@{user.profilePicture ?? ` `}"
-            app:shapeAppearanceOverlay="@style/circularImageView"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:progressBar="@{progressCircular}"
-            />
-
-        <ProgressBar
-            android:id="@+id/progress_circular"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            app:layout_constraintTop_toTopOf="@id/profileImage"
-            app:layout_constraintBottom_toBottomOf="@id/profileImage"
-            app:layout_constraintStart_toStartOf="@id/profileImage"
-            app:layout_constraintEnd_toEndOf="@id/profileImage"
-            android:indeterminateTint="@color/science_blue"
-            />
-
-        <TextView
-            android:id="@+id/userName"
-            android:layout_width="0dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/profileImage"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginHorizontal="10dp"
-            android:text="@{user.name}"
-            android:textSize="16sp"
-            android:textColor="@color/black"
-            android:fontFamily="@font/noto_sans_semi_bold"
-            />
+            android:background="@drawable/gradient_border_ll"
+            android:padding="10dp">
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="10dp"
-            android:layout_marginTop="4dp"
-            app:layout_constraintTop_toBottomOf="@id/userName"
-            app:layout_constraintStart_toEndOf="@id/profileImage"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:fontFamily="@font/noto_sans_medium"
-            android:text="@{@string/n_courses_published(user.courses.size())}"
-            />
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/profileImage"
+                android:layout_width="55dp"
+                android:layout_height="55dp"
+                app:imageUrl="@{user.profilePicture ?? ` `}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:progressBar="@{progressCircular}"
+                app:shapeAppearanceOverlay="@style/circularImageView" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <ProgressBar
+                android:id="@+id/progress_circular"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:indeterminateTint="@color/science_blue"
+                app:layout_constraintBottom_toBottomOf="@id/profileImage"
+                app:layout_constraintEnd_toEndOf="@id/profileImage"
+                app:layout_constraintStart_toStartOf="@id/profileImage"
+                app:layout_constraintTop_toTopOf="@id/profileImage" />
+
+            <TextView
+                android:id="@+id/userName"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                android:fontFamily="@font/noto_sans_semi_bold"
+                android:text="@{user.name}"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/profileImage"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="4dp"
+                android:fontFamily="@font/noto_sans_medium"
+                android:text="@{@string/n_courses_published(user.courses.size())}"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/profileImage"
+                app:layout_constraintTop_toBottomOf="@id/userName" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 </layout>
