--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="gold">#FFD700</color>
     <color name="pale_aqua">#C4CCF6</color>
     <color name="science_blue">#0055DF</color>
+    <color name="fade_blue">#E0ECFF</color>
     <color name="mid_science_blue">#176EFB</color>
     <color name="light_science_blue">#4E90FE</color>
     <color name="paris_green">#40D471</color>
