--- a/app/src/main/res/layout/about_course_item_layout.xml
+++ b/app/src/main/res/layout/about_course_item_layout.xml
@@ -12,13 +12,16 @@
     </data>
 
     <com.google.android.material.card.MaterialCardView
+        android:id="@+id/aboutCourseItemCV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="15dp"
         app:strokeWidth="1dp"
         app:strokeColor="@color/darkGrey"
         app:cardBackgroundColor="@android:color/transparent"
-        app:cardElevation="0dp">
+        app:cardElevation="0dp"
+        android:clickable="true"
+        android:foreground="?attr/selectableItemBackground">
 
         <LinearLayout
             android:layout_width="match_parent"
