--- a/app/src/main/res/layout/fragment_courses.xml
+++ b/app/src/main/res/layout/fragment_courses.xml
@@ -43,10 +43,11 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toTopOf="@id/searchCoursesAndMentorsRV"
             app:lottie_autoPlay="true"
             app:lottie_loop="true"
-            app:lottie_rawRes="@raw/loading_animation_2" />
+            app:lottie_rawRes="@raw/loading_animation_2"
+            app:lottie_colorFilter="@color/science_blue"/>
 
         <LinearLayout
             android:id="@+id/searchViewLayout"
