--- a/app/src/main/res/layout/quiz_status_cv.xml
+++ b/app/src/main/res/layout/quiz_status_cv.xml
@@ -3,9 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+        <import type="com.sekhgmainuddin.learnwithfun.R"/>
         <variable
-            name="enrolled_course"
-            type="com.sekhgmainuddin.learnwithfun.data.remote.dto.EnrolledCourseDto" />
+            name="quiz"
+            type="com.sekhgmainuddin.learnwithfun.data.remote.dto.quizStats.QuizAttendedDto" />
     </data>
 
     <com.google.android.material.card.MaterialCardView
@@ -32,7 +33,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:shapeAppearanceOverlay="@style/roundedImageView"
                 android:scaleType="centerCrop"
-                app:imageUrl="@{enrolled_course.courseThumbnail ?? ` `}"
+                app:imageUrl="@{quiz.courseThumbnail ?? ` `}"
                 app:progressBar="@{currentCourseImageProgressBar}" />
 
             <ProgressBar
@@ -49,10 +50,10 @@
                 android:id="@+id/currentCourseTitle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="@{enrolled_course.courseName}"
+                android:text="@{quiz.courseName}"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@id/currentCourseImage"
-                app:layout_constraintEnd_toStartOf="@id/playCurrentCourseButton"
+                app:layout_constraintEnd_toStartOf="@id/attendQuizButton"
                 android:layout_marginHorizontal="15dp"
                 android:maxLines="1"
                 android:ellipsize="end"
@@ -66,9 +67,10 @@
                 app:layout_constraintTop_toBottomOf="@id/currentCourseTitle"
                 app:layout_constraintStart_toStartOf="@id/currentCourseTitle"
                 app:layout_constraintEnd_toStartOf="@id/quizAttendedStatsTV"
+                app:layout_constraintBottom_toTopOf="@id/quizAttendedProgress"
                 android:maxLines="1"
                 android:ellipsize="end"
-                android:text="@{enrolled_course.instructorName}"
+                android:text="@string/quiz_attended"
                 android:textColor="@color/grey" />
 
             <TextView
@@ -77,7 +79,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintBottom_toTopOf="@id/quizAttendedProgress"
                 app:layout_constraintEnd_toEndOf="@id/quizAttendedProgress"
-                android:text="@{@string/course_coverage(enrolled_course.courseCoverage, enrolled_course.courseLength)}"
+                android:text="@{@string/course_coverage(quiz.totalQuizAttended, quiz.totalNumberOfQuiz)}"
                 android:fontFamily="@font/noto_sans_semi_bold"
                 android:textColor="@color/black"
                 />
@@ -93,19 +95,19 @@
                 app:trackCornerRadius="15dp"
                 app:trackThickness="10dp"
                 android:indeterminate="false"
-                android:progress="@{enrolled_course.courseCoverageProgress}"
+                android:progress="@{quiz.quizAttendedPercentage}"
                 app:indicatorColor="@color/mid_science_blue"
                 app:trackColor="@color/pale_aqua" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/playCurrentCourseButton"
+                android:id="@+id/attendQuizButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:backgroundTint="@color/mid_science_blue"
-                android:src="@drawable/baseline_play_arrow_24"
+                app:customBackgroundTint="@{quiz.quizAttendedPercentage == 100 ? R.color.paris_green : R.color.mid_science_blue}"
+                android:src="@{quiz.quizAttendedPercentage == 100 ? @drawable/baseline_done_24 : @drawable/baseline_navigate_next_24}"
                 app:tint="@color/white"
                 app:maxImageSize="32dp" />
 
