--- a/app/src/main/res/layout/other_video_content_item.xml
+++ b/app/src/main/res/layout/other_video_content_item.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+        <import type="com.sekhgmainuddin.learnwithfun.common.utils.Utils" alias="utils"/>
 
         <import type="com.sekhgmainuddin.learnwithfun.R" />
 
@@ -89,7 +90,7 @@
                             android:fontFamily="@font/noto_sans_semi_bold"
                             android:paddingHorizontal="4dp"
                             android:paddingVertical="2dp"
-                            android:text="@{content.courseDuration ?? ` `}"
+                            android:text="@{utils.INSTANCE.getHrsMinutesAndSecondsString(content.contentDuration)}"
                             android:textAlignment="center"
                             android:textColor="@color/black"
                             android:textSize="12sp"
