--- a/app/src/main/res/layout/course_content_item.xml
+++ b/app/src/main/res/layout/course_content_item.xml
@@ -4,6 +4,7 @@
     xmlns:bind="http://schemas.android.com/apk/res-auto">
 
     <data>
+        <import type="com.sekhgmainuddin.learnwithfun.common.utils.Utils" alias="utils"/>
         <import type="com.sekhgmainuddin.learnwithfun.common.utils.Utils"/>
         <import type="com.sekhgmainuddin.learnwithfun.R"/>
         <variable
@@ -92,7 +93,7 @@
                         android:fontFamily="@font/noto_sans_semi_bold"
                         android:paddingHorizontal="12dp"
                         android:paddingVertical="5dp"
-                        android:text="@{content.courseDuration ?? ` `}"
+                        android:text="@{utils.INSTANCE.getHrsMinutesAndSecondsString(content.contentDuration)}"
                         android:textAlignment="center"
                         android:textColor="@color/black"
                         android:textSize="14sp"
