fix: viewmodel issue in exam/quiz

--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -46,6 +46,9 @@
         <action
             android:id="@+id/action_enrollCourseFragment_to_lessonsFragment"
             app:destination="@id/lessonsFragment" />
+        <action
+            android:id="@+id/action_enrollCourseFragment_to_startPayment"
+            app:destination="@id/startPayment" />
     </fragment>
     <fragment
         android:id="@+id/courseTutorialFragment"
