--- a/app/src/main/res/layout/activity_course_video.xml
+++ b/app/src/main/res/layout/activity_course_video.xml
@@ -108,6 +108,7 @@
                     android:text="@string/notes"
                     android:textAllCaps="false"
                     app:elevation="5dp"
+                    android:textColor="@color/white"
                     android:translationZ="5dp"
                     app:cornerRadius="25dp"
                     android:visibility="@{content.notesPdfUrl!=null ? View.VISIBLE: View.GONE}"
@@ -122,6 +123,7 @@
                     android:drawableLeft="@drawable/attend_quiz_drawable"
                     android:paddingVertical="5dp"
                     android:text="@string/quiz"
+                    android:textColor="@color/white"
                     android:textAllCaps="false"
                     app:cornerRadius="25dp"
                     android:translationZ="5dp"
