--- a/app/src/main/res/layout/course_content_item.xml
+++ b/app/src/main/res/layout/course_content_item.xml
@@ -191,6 +191,7 @@
                         android:text="@string/play_video"
                         android:textAllCaps="false"
                         app:cornerRadius="25dp"
+                        android:textColor="@color/white"
                         android:textSize="12sp"
                         android:focusable="false"
                         android:focusableInTouchMode="false"
@@ -218,6 +219,7 @@
                         android:drawableLeft="@drawable/attend_quiz_drawable"
                         android:paddingVertical="5dp"
                         android:text="@string/quiz"
+                        android:textColor="@color/white"
                         android:textAllCaps="false"
                         app:cornerRadius="25dp"
                         android:focusable="false"
